# RiverDataCollector

./: .gitignore  README.md  hydro_data.csv  pyproject.toml  requirements.txt
.github/workflows/: javorinka24hrs-cron.yml
firebaseFunction/: main.py
functionsJavorinka/: GetJavorinka.py
javorinkaDataCollector/: get_javorinka.py  javorinka_to_csv.py
javorinkaToCSV/: JavorinkaToCSV.py  javorinka_to_csv.py
src/river_data_collector/: main.py
src/river_data_collector/app/: app_interface.py
src/river_data_collector/db/: db_interface.py
src/river_data_collector/river_downloader/: imgw.py  river_downloader_interface.py  shmu.py
src/river_data_collector/river_downloader/models/: measurement.py  river.py  station.py
src/river_data_collector/scheduler/: scheduler_interface.py
