[project]
name = "river_data_collector"
version = "0.1.1"
description = "Downloads river records"
authors = [
    {name = "Mateusz Gasior",email = "mateuszgasior314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.2.3,<3.0.0)"
]
packages = [
    { include = "river_data_collector", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
